--- a/homework1/homework1.html
+++ b/homework1/homework1.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" type="text/css" href="homework1.css">
-		<script type="text/javascript" src="homework1.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title> IT2805 </title>
 	<head>
 	<body>
