--- a/homework5/homework5.html
+++ b/homework5/homework5.html
@@ -5,9 +5,14 @@
 		<link rel="stylesheet" type="text/css" href="homework5.css">
 		<script type="text/javascript" src="homework5.js"></script>
 		<title> IT2805 </title>
-	<head>
+	</head>
 	<body>
 		<h1>Homework 5</h1>
-		<a href="../index.html"><button>Back</button></a>
+		<p><a href="exercise-1/index.html">exercise-1</a></p>
+		<p><a href="exercise-2/positioning.html">exercise-2</a></p>
+		<p><a href="exercise-3/site.html">exercise-3</a></p>
+		<p><a href="exercise-4/index.html">exercise-4</a></p>
+		<p><a href="exercise-5/aboutme.html">exercise-5</a></p>
+		<p><a href="../index.html">Back</a></p>
 	</body>
 </html>
