--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<script type="text/javascript" src="index.js"></script>
 		<title> IT2805 - jQrgen</title>
-	<head>
+	</head>
 	<body>
 		<h3>My IT2805 - Web Technologies Course Page</h3>
 		<small>jQrgen Svennevik Notland</small>
@@ -13,7 +13,7 @@
 			<li><a href="homework1/homework1.html">Link to Homework #1</a></li>
 			<li><a href="homework2/homework2.html">Link to Homework #2</a></li>
 			<li><a href="homework3/homework3.html">Link to Homework #3</a></li>
-			<li><a href="homework4/homework4.html">Link to Homework #4</a></li>
+			<li><a href="homework4/forslaget.html">Link to Homework #4</a></li>
 			<li><a href="homework5/homework5.html">Link to Homework #5</a></li>
 			<li><a href="homework6/homework6.html">Link to Homework #6</a></li>
 			<li><a href="homework7/homework7.html">Link to Homework #7</a></li>
