--- a/homework3/exercise-2/index.html
+++ b/homework3/exercise-2/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-
+		<!-- css -->
 		<link rel="stylesheet" href="style.css">
 		<!-- Bootstrap css -->
 		<link rel="stylesheet" href="lib/bootstrap-3.2.0-dist/css/bootstrap.min.css">
