--- a/homework6/homework6.html
+++ b/homework6/homework6.html
@@ -8,6 +8,8 @@
 	<head>
 	<body>
 		<h1>Homework 6</h1>
-		<a href="../index.html"><button>Back</button></a>
+		<a href="exercise1/multimedia.html">exercise 1</a><br>
+		<a href="exercise2/exercise2.html">exercise 2</a><br>
+		<a href="../index.html">Back</a>
 	</body>
 </html>
