oppgave1 ferdig, eid

--- a/homework9/exercise1/table-sort.html
+++ b/homework9/exercise1/table-sort.html
@@ -42,8 +42,8 @@
             </tbody>
         </table>
 
-        <button id="sort-button-1">Sort by Column 1</button>
-        <button id="sort-button-2">Sort by Column 2</button>
-        <button id="sort-button-3">Sort by Column 3</button>
+        <button id="sort-button-1" onClick="sortByColumnNumber(1)">Sort by Column 1</button>
+        <button id="sort-button-2" onClick="sortByColumnNumber(2)">Sort by Column 2</button>
+        <button id="sort-button-3" onClick="sortByColumnNumber(3)">Sort by Column 3</button>
     </body>
 </html>
