--- a/homework9/homework9.html
+++ b/homework9/homework9.html
@@ -8,6 +8,8 @@
 	<head>
 	<body>
 		<h1>Homework 9</h1>
+		<a href="exercise1/table-sort.html">Exercise1</a><br>
+		<a href="exercise2/todo-list.html">Exercise2</a><br>
 		<a href="../index.html"><button>Back</button></a>
 	</body>
 </html>
