--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			<li><a href="homework7/homework7.html">Link to Homework #7</a></li>
 			<li><a href="homework8/homework8.html">Link to Homework #8</a></li>
 			<li><a href="homework9/homework9.html">Link to Homework #9</a></li>
+			<li><a href="homework10/">Link to Homework #10</a></li>
+			<li><a href="homework11/homework11.html">Link to Homework #11</a></li>
 		</ul>
 	</body>
 </html>
